# HeliosDB-CodeKB-MCP

./: .gitignore  .mcp.json  ADOPTION_0.2.5.md  CHANGELOG.md  Cargo.toml  Cross.toml  ENGINE_FRS_FROM_CODEKB_2026-05-26.md  ENGINE_REGRESSION_BISECT_RESULT.md  ENGINE_REGRESSION_v3.22.2_to_v3.30.0.md  MCP_ECOSYSTEM_BENCHMARK_REPORT_2026-05-27.md  NANO_PERSISTENT_PQ_HNSW_ADOPTION.md  README.md  ROADMAP.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
bench/: README.md  compare.sh  mcp-on.json.tmpl  ollama_compare.py  ollama_run.py  portfolio_questions.txt  questions.txt  run.sh  setup.sh  steer-prompt.md
commands/: codekb-ingest.md  codekb-setup.md  codekb-status.md  codekb-tip.md
docs/: ANNOUNCEMENT_PACK_v0.2.2.md  ANNOUNCEMENT_PACK_v0.2.3.md
install/: README.md  claude-code.mcp.json  codex.config.toml  install.sh
skills/: codekb-pro-features.md
src/: checkpoint.rs  config.rs  distill.rs  ingest.rs  kb.rs  linker.rs  main.rs  mcp_trim.rs  quality.rs  wrappers.rs
tests/: config_smoke.rs  http_transport.rs  ingest_contract.rs  tool_surface_profile.rs  wrapper_dispatch.rs
